# PrimeNumberSearcher

PrimeNumberSearcher/: CMakeLists.txt  ParserTEST.h  PrimeSearcher.cpp  PrimeSearcher.h  SearcherTEST.h  XMLparser.cpp  XMLparser.h  main.cpp
PrimeNumberSearcher/xmldir/: TESTinput.xml  input.xml  output.xml
